--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 	<title>TextWebApp {% block title %}{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<!-- Bootstrap -->
-	{{ link_tag('bootstrap.min.css') }}
+	{{ link_tag('bootstrap.min') }}
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,25 +21,10 @@
 	
 </head>
 <body>
-	<h1>Text Sharing Web Application</h1>
 
-<blockquote>
-  <p>It was the best of times, it was the worst of times, it was the age of widsom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair.</p>
-  <small>Charles Dickens <cite title="Source Title">"A Tale of Two Cities (1859)"</cite></small>
-<div class="checkbox">
-    <label>
-      <input type="checkbox"> Disable Author Data (why does this span the whole page?)
-    </label>
-</div>
-</blockquote>
-
-<p>^^ cycle through different famous first lines of novels</p>
-
-<p>Let's collaborate together to create the worlds first library of crowdsourced stories, diaries, lyrics, etc. There are no limits; any type of text content is acceptable. The voting process will highlight the most popular content so other users may add to it. If a story takes a complete different directions, that it completely encouraged! This is a experiment to see what comes out. Link specific content to your friends and share via social media/email/etc. Create your own private branches if you have a specific group  of people you would like to collaborate with. Use it as you see fit!</p>
-
-<h3>Above content should be on seperate intro page</h3>
-
-<br><br>
+	{% block intro %}
+	{% endblock %}
+	
 
 	<nav class="navbar navbar-default" role="navigation">
 	    <ul class="nav navbar-nav">
@@ -79,26 +64,16 @@
 	      </li>
 	    </ul>
 	</nav>
-
+	
+	
+	
+	
 	<div class="container">
-	    <table class="table table-hover table-bordered">
-	      <tr>
-		<th>Sample Value 1</th>
-		<th>Sample Value 2</th>
-		<th>Sample Value 3</th>
-	      </tr>
-	      <tr>
-		<td>Table Data 1</td>
-		<td>Table Data 2</td>
-		<td>Table Data 3</td>
-	      </tr>
-	      <tr>
-		<td>Table Data 1</td>
-		<td>Table Data 2</td>
-		<td>Table Data 3</td>
-	      </tr>
-	    </table>
-	  </div>
+		{% block table %}
+		{% endblock %} 
+	</div>
+
+
 
 <div class="checkbox">
     <label>
@@ -109,7 +84,6 @@
 <br><br>
 
 <form role="form">
-
   <div class="form-group">
     <label for="contentInput">Input Text Below</label>
 	<textarea class="form-control" rows="5"></textarea>
@@ -125,6 +99,11 @@
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
+
+
+
+
+
 <!-- Footer (disclaimer) -->
 <p>All content posted on this website will become part of the public domain and is freely accessible by anyone. Please be respectful with content. For important items please keep your own seperate copy as we cannot guarentee the maintenance of all all content on our website</p>
 
@@ -132,10 +111,10 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        {{ script_tag('https://code.jquery.com/jquery.js') }}
+	<script src="https://code.jquery.com/jquery.js"></script>
         
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-	{{ script_tag('/js/bootstrap.min.js') }}
+	{{ script_tag('bootstrap.min') }}
   </body>
 </html>
 
